--- a/Alert/app/src/main/res/layout/item_create_alert_area_add.xml
+++ b/Alert/app/src/main/res/layout/item_create_alert_area_add.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="32dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvText"
@@ -11,12 +10,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
-        android:minHeight="24dp"
+        android:background="?attr/selectableItemBackground"
+        android:paddingBottom="8dp"
         android:text="@string/add_another_area"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingTop="8dp"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
