Various bug fixes

--- a/Alert/app/src/main/res/layout/activity_create_alert.xml
+++ b/Alert/app/src/main/res/layout/activity_create_alert.xml
@@ -133,6 +133,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ivRedAlertReason"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapSentences"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -170,6 +172,7 @@
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ivPopulation"
+                    android:imeOptions="actionDone"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -235,6 +238,8 @@
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ivInformation"
+                    android:imeOptions="actionDone"
+                    android:inputType="textCapSentences"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
