--- a/Alert/app/src/main/res/layout/nav_header_main.xml
+++ b/Alert/app/src/main/res/layout/nav_header_main.xml
@@ -19,8 +19,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_marginBottom="4dp"
-            app:civ_circle_background_color="@color/divider_gray"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:civ_circle_background_color="@color/white"
             android:id="@+id/img_profile"
             android:layout_width="72dp"
             app:srcCompat="@android:drawable/sym_def_app_icon"
