--- a/Alert/app/src/main/res/layout/activity_alert_detail.xml
+++ b/Alert/app/src/main/res/layout/activity_alert_detail.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
     tools:context="org.alertpreparedness.platform.v2.alert.AlertDetailActivity">
 
     <include
@@ -22,8 +21,10 @@
         android:gravity="center"
         android:padding="8dp"
         android:textColor="@color/white"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        tools:text="Vincent Henson has requested the alert level to go from Amber to Red on the 27/09/2017" />
+        tools:text="Vincent Henson has requested the alert level to go from Amber to Red on the 27/09/2017"
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAlertDetails"
@@ -38,13 +39,36 @@
         tools:listitem="@layout/item_alert_detail" />
 
     <TextView
-        android:id="@+id/tvLastUpdated"
-        android:layout_width="match_parent"
+        android:id="@+id/tvLastUpdatedLabel"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingEnd="2dp"
+        android:paddingStart="2dp"
         app:layout_constraintBottom_toTopOf="@id/barButtons"
-        tools:text="Last updated: 21/02/2019" />
+        app:layout_constraintEnd_toStartOf="@+id/tvLastUpdated"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/last_updated_label"
+        app:layout_constraintHorizontal_chainStyle="packed"/>
+
+    <TextView
+        android:id="@+id/tvLastUpdated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingEnd="2dp"
+        android:paddingStart="2dp"
+        app:layout_constraintBottom_toTopOf="@id/barButtons"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvLastUpdatedLabel"
+        tools:text="21/02/2019"
+        android:textStyle="bold"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/center"
@@ -87,7 +111,9 @@
         android:id="@+id/grpApproveReject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="btnApprove, btnReject" />
+        android:visibility="gone"
+        app:constraint_referenced_ids="btnApprove, btnReject"
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
