--- a/Alert/app/src/main/res/menu/edit.xml
+++ b/Alert/app/src/main/res/menu/edit.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/btnEdit"
-        android:icon="@drawable/action_edit"
+        android:icon="@drawable/edit"
         android:title="@string/edit"
         app:showAsAction="ifRoom" />
 </menu>
